# proofchecker

./: .gitignore  LICENSE  README.md  check_proof.py  repl_parser.py  requirements.txt  test.proof
.github/workflows/: python-tests.yml
cpp/: CMakeLists.txt  compile_commands.json  prover.cpp
cpp/.cache/clangd/index/: prover.cpp.E119C8C5744EE7A5.idx
examples/: am_gm.proof  cases.proof  chained.proof  disproven.proof  epsilon_delta.proof  example.proof  imports.proof  integers.proof  math_functions.proof  not_equal.proof  proof_steps.proof  theorems.proof  triangle_inequality.proof
python/: dsl_cli.py  parser.py  prover.py  test1.json  test2.json  test_connectives.json  test_math.json  test_parser.py  test_prover.py  test_quantifiers.json
stdlib/: arithmetic.proof
web/: app.py  index.html
